2008-01-18  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/Makefile.am (libkaffe_la_SOURCES): Added jni and
	verifier sources.
	(SUBDIRS): Removed jni and verifier directories. 
	(libkaffe_la_DEPENDENCIES): Removed jni and verifier convenience libraries.

	* kaffe/kaffevm/verifier/Makefile.am,
	kaffe/kaffevm/jni/Makefile.am: Removed.

	* configure.ac: Removed Makefiles for jni and verifier.

2008-01-18  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/boehm-gc/Makefile.am: Make libkaffegc.la a convenience library.

2008-01-18  Dalibor Topic  <robilad@kaffe.org>

	* config/i386/jit-i386.def:  Removed unused nop and unimplemented 
	instructions. Removed ifdef-ed out code.

2008-01-18  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2008-01-18  Dalibor Topic  <robilad@kaffe.org>

	* config/i386/jit3-i386.def: Removed unused nop and unimplemented 
	instructions. Removed ifdef-ed out code.

2008-01-17  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Disabled zlib-zip by default.

2008-01-17  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Rewritten checking for pure java math to make the 
	native GNU MP implementation disabled by default.

2008-01-17  Doug Young  <doug@morphlix.com>

	* kaffe/kaffevm/systems/unix-pthreads/signal.c (stackOverflowDetector),
	kaffe/kaffevm/systems/unix-jthreads/signal.c (stackOverflowDetector): 
	The "sig" argument should be used to clear the signal, since it could 
	be either SIGSEGV or SIGBUS.

2008-01-16  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Only check for libgc when boehm-gc is selected as the
	garbage collector.

	Reported by:  Kiyo Inaba  <inaba@src.ricoh.co.jp>

2008-01-16  Dalibor Topic  <robilad@kaffe.org>

	*  libraries/javalib/awt-implementations/kaffe/java/awt/image/package.html,
	libraries/javalib/awt-implementations/kaffe/java/awt/package.html,
	libraries/javalib/awt-implementations/kaffe/java/awt/event/package.html: 
	Removed left over copies of Classpath's javadoc.
